--- a/react_js/ReactCharts/public/index.html
+++ b/react_js/ReactCharts/public/index.html
@@ -5,18 +5,36 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
 		<title>React Charts Demo</title>
+		
+		<!-- Latest compiled and minified bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- Latest compiled bootstrap JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 		<!-- sytlesheets -->
-		<link rel='stylesheet' href='https://finception.in/static/redesign/style.css' />
+		<!-- <link rel='stylesheet' href='https://finception.in/static/redesign/style.css' /> -->
+		<link rel="stylesheet" type="text/css" href="finception.css">
 		<link rel="shortcut icon" href="https://dtj76ow1clmcw.cloudfront.net/images/favicon.png" type="image/png">
 		<link href="https://fonts.googleapis.com/css?family=Cabin|Merriweather|Open+Sans|Quicksand" rel="stylesheet">
-		<!-- fontawesome -->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/solid.css" integrity="sha384-VGP9aw4WtGH/uPAOseYxZ+Vz/vaTb1ehm1bwx92Fm8dTrE+3boLfF1SpAtB1z7HW" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/brands.css" integrity="sha384-nT8r1Kzllf71iZl81CdFzObMsaLOhqBU1JD2+XoAALbdtWaXDOlWOZTR4v1ktjPE" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css" integrity="sha384-HbmWTHay9psM8qyzEKPc8odH4DsOuzdejtnr+OFtDmOcIVnhgReQ4GZBH7uwcjf6" crossorigin="anonymous">
+
 	</head>
 
 	<body>
 		<div id="root"></div>
+		<script>
+			console.log("ad");
+		</script>
 	</body>
 
 </html>
+
+<!--
+	finception.css line 1281///
+	in this file commented section's requirement///
+	hide navbar when scrolling down///
+	highlight sidenav sections when scrolling down
+	navbar paddings///
+	change theme to light///
+-->
