11 Dec commit 1). finalized template for finception

--- a/react_js/ReactCharts/public/index.html
+++ b/react_js/ReactCharts/public/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<title>React Charts Demo</title>
+		<title>React Charts</title>
 		
 		<!-- Latest compiled and minified bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,8 +14,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 		<!-- sytlesheets -->
-		<!-- <link rel='stylesheet' href='https://finception.in/static/redesign/style.css' /> -->
-		<link rel="stylesheet" type="text/css" href="finception.css">
+		<link rel="stylesheet" type="text/css" href="./finception.css">
 		<link rel="shortcut icon" href="https://dtj76ow1clmcw.cloudfront.net/images/favicon.png" type="image/png">
 		<link href="https://fonts.googleapis.com/css?family=Cabin|Merriweather|Open+Sans|Quicksand" rel="stylesheet">
 
@@ -23,9 +22,6 @@
 
 	<body>
 		<div id="root"></div>
-		<script>
-			console.log("ad");
-		</script>
 	</body>
 
 </html>
@@ -35,6 +31,9 @@
 	in this file commented section's requirement///
 	hide navbar when scrolling down///
 	highlight sidenav sections when scrolling down
+	hide navbar after clicking appropriate sections//
+	make navigation changes permanent while navigating different parts of same page or different
+	footer and sidenav clashes
 	navbar paddings///
 	change theme to light///
 -->
